--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example1",
+  "name": "Electronic picture book",
   "description": "Electronic picture book",
   "version": "1.0.0",
   "author": "luoliang01 <luoliang01@58ganji.com>",
