--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Electronic picture book",
+  "name": "eletronic-book",
   "description": "Electronic picture book",
   "version": "1.0.0",
   "author": "luoliang01 <luoliang01@58ganji.com>",
@@ -9,7 +9,9 @@
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@tweenjs/tween.js": "^17.1.1"
+  },
   "browserslist": [
     "> 1%",
     "last 2 versions",
@@ -19,6 +21,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
