--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "@tweenjs/tween.js": "^17.1.1"
+    "@tweenjs/tween.js": "^17.1.1",
+    "gown": "^0.1.6"
   },
   "browserslist": [
     "> 1%",
