--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ jspm_packages/
 # Typescript v1 declaration files
 typings/
 
+
 # Optional npm cache directory
 .npm
 
@@ -57,3 +58,4 @@ typings/
 # dotenv environment variables file
 .env
 
+scenes/
