--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
     "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "webpack-dev-server": "^2.9.1",
+    "webpack-visualizer-plugin": "^0.1.11"
   }
 }
