--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "pbuild": "cross-env NODE_ENV=production webpack --progress --colors --profile --display-modules"
   },
   "dependencies": {
     "@tweenjs/tween.js": "^17.1.1",
@@ -29,6 +30,7 @@
     "file-loader": "^1.1.4",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1",
+    "webpack-parallel-uglify-plugin": "^1.0.2",
     "webpack-visualizer-plugin": "^0.1.11"
   }
 }
